@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.movieplayer.it"
        name="MoviePlayer.it"
-       version="1.3.1"
+       version="1.3.2"
        provider-name="KoTiX and Gulp">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.1.0"/>
-    <import addon="metadata.common.imdb.com" version="2.1.3"/>
+    <import addon="metadata.common.themoviedb.org" version="2.0.0"/>
+    <import addon="metadata.common.imdb.com" version="2.1.5"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="it"
