@@ -1,4 +1,5 @@
 Changelog:
+16/01/2012 - Updated local IMDB string, moved Genre to official imdb.common. Tuned Bing search with (film %date%)
 05/09/2011 - Tuning of year & originaltitle regexp
 11/08/2011 - added "" to bing search, fixed original title and mpaa fields.
 07/08/2011 - updated main scraper to use new MoviePlayer layout .
